fix: update dark mode background colors for consistency across components

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -128,6 +128,10 @@ hr {
 	a {
 		color: rgb(228, 228, 228)
 	}
+	body {
+		background-color: #2f2f2f;
+		background: #2f2f2f;
+	}
 	main {
 		background-color: #2f2f2f;
 	}
